[metadata]
name = dbuild
summary = parallel docker build manager
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    dbuild

[entry_points]
console_scripts =
    dbuild = dbuild.build:main

[compile_catalog]
directory = dbuild/locale
domain = dbuild

[update_catalog]
domain = dbuild
output_dir = dbuild/locale
input_file = dbuild/locale/dbuild.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = dbuild/locale/dbuild.pot
